# ai-music-critic

./: .gitignore  README.md  pyproject.toml
models/: instructions
musiccritic/: __init__.py  chatgpt.py  chatgptpromptpreparer.py  config.py  critic.py  musiccritic.py  prompt.py  whisper.py
musiccritic/musicanalysis/: essentiaembeddinganalyzer.py  monoloader.py  musicanalyzer.py  musicanalyzers.py  scoretolabelconverter.py  tempoanalyzer.py
